# speech-aligner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: default_rules.cmake
cmake/Modules/: FindBLAS.cmake
egs/cn_phn/: README.md  path.sh  run.sh
egs/cn_phn/conf/: align.conf
egs/cn_phn/data/: text  wav.scp
egs/cn_phn/res/: disambig.int  phones.txt  tree
src/base/: kaldi-types.h  version.h
src/decoder/: decoder-wrappers.cc  decoder-wrappers.h
src/itf/: CMakeLists.txt
src/matrix/: kaldi-matrix.cc  kaldi-matrix.h
src/transform/: cmvn.cc
tools/blas/mkl/: mkl_blas.h  mkl_cblas.h  mkl_version.h  mkl_vsl_functions.h
tools/openfst/: CMakeLists.txt
tools/openfst/src/: CMakeLists.txt
tools/openfst/src/include/fst/: arc-map.h  determinize.h  float-weight.h  fst-decl.h  icu.h  matcher.h  queue.h  relabel.h  string.h  symbol-table.h  util.h  weight.h
tools/openfst/src/include/fst/extensions/ngram/: nthbit.h
tools/openfst/src/include/fst/test/: algo_test.h
tools/openfst/src/lib/: flags.cc  symbol-table.cc
